--- a/resources/language/resource.language.en_GB/strings.po
+++ b/resources/language/resource.language.en_GB/strings.po
@@ -29,7 +29,15 @@ msgid "next page"
 msgstr ""
 
 msgctxt "#30005"
-msgid "Sorry, can't resolve url.."
+msgid "Sorry, can't find any recognizable url."
+msgstr ""
+
+msgctxt "#30006"
+msgid "Sorry, can't resolve url to playable video."
+msgstr ""
+
+msgctxt "#30007"
+msgid "Choose file host server.."
 msgstr ""
 
 msgctxt "#30200"
