--- a/resources/language/resource.language.sk_SK/strings.po
+++ b/resources/language/resource.language.sk_SK/strings.po
@@ -88,6 +88,10 @@ msgctxt "#30211"
 msgid "Lifestyle"
 msgstr "Životný štýl"
 
+msgctxt "#30212"
+msgid "Geographic"
+msgstr "Cestovateľské"
+
 msgctxt "#30300"
 msgid "Order"
 msgstr "Poradie"
